<resources>
    <string name="app_name">Shop\'s Notes</string>
    <string name="content_desc">Content Desc</string>
    <string name="name_exp">APOLLO PANDAN</string>
    <string name="unit_exp">KTK</string>
    <string name="barcode_number">726165092062</string>
    <string name="stock_number">20</string>
    <string name="price_number">Rp 2,000,000</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="unit">Unit (PCS,KG)</string>
    <string name="stock">Stock</string>
    <string name="buy_price">Buy Price</string>
    <string name="sell_price">Sell Price</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="message_undo">Undelete previous item?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Field can not be blank</string>
    <string name="must_letter">Field must be letters</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_cancel">Are you sure to cancel?</string>
    <string name="message_delete">Are you sure you want to delete this note?</string>
    <string name="added">Add Note Success</string>
    <string name="changed">Update Note Success</string>
    <string name="deleted">Delete Note Success</string>
    <string name="empty_number">0</string>
</resources>