<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_item_date"
            style="@style/TextStyle.Secondary.Smallest"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextStyle.Primary"
            android:layout_marginTop="16dp"
            android:text="@string/name_exp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

        <TextView
            android:id="@+id/tv_item_unit"
            style="@style/TextStyle.Primary"
            android:layout_marginStart="8dp"
            android:text="@string/unit_exp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
            app:layout_constraintStart_toEndOf="@+id/tv_item_name"
            app:layout_constraintTop_toTopOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_stock"
            style="@style/TextStyle.Secondary"
            android:text="@string/stock_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_barcode"
            style="@style/TextStyle.Secondary.Small"
            android:layout_marginTop="4dp"
            android:text="@string/barcode_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_buy"
            style="@style/TextStyle.Primary.Small"
            android:layout_marginEnd="8dp"
            android:text="@string/price_number"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_barcode"
            app:layout_constraintEnd_toEndOf="@id/iv_dot"
            app:layout_constraintTop_toTopOf="@+id/tv_item_sell" />

        <ImageView
            android:id="@+id/iv_dot"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/ic_round_dot"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_sell"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_sell"
            app:layout_constraintTop_toTopOf="@+id/tv_item_sell" />

        <TextView
            android:id="@+id/tv_item_sell"
            style="@style/TextStyle.Primary.Small"
            android:text="@string/price_number"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_barcode"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>